# ospray_util

./: CMakeLists.txt  LICENSE  README.md
include/: GCD.hpp  PiecewiseLinearFunction.hpp
include/ospray_util/: PiecewiseLinearFunction.hpp  TransferFunction.hpp
src/: CMakeLists.txt  GCD.cpp  TransferFunction.cpp
